smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/inline-io/inline-structure-member.smithy
// Syntax error at line 6, column 13: Expected COLON(':') but found WALRUS(':=') | Model
$version: "2.0"
namespace smithy.example

structure Structure {
    inlined := String
}
